include/altdss/capi/alt.h

    ALTDSS_CAPI_DLL void Alt_CE_Close(void* elem, int32_t terminal, int32_t phase);
    ALTDSS_CAPI_DLL void Alt_CE_Open(void* elem, int32_t terminal, int32_t phase);
    ALTDSS_CAPI_DLL altdss_bool_t Alt_CE_IsOpen(void* elem, int32_t terminal, int32_t phase);
    ALTDSS_CAPI_DLL void Alt_CE_Get_Residuals(double** resultPtr, int32_t *resultDims, void* elem);
    ALTDSS_CAPI_DLL int32_t Alt_CE_Get_Handle(void* elem);
    ALTDSS_CAPI_DLL void Alt_CE_Get_Controllers(void*** resultPtr, int32_t* resultDims, void* elem);
    ALTDSS_CAPI_DLL altdss_bool_t Alt_CE_Get_HasVoltControl(void* elem);
    ALTDSS_CAPI_DLL altdss_bool_t Alt_CE_Get_HasSwitchControl(void* elem);
    ALTDSS_CAPI_DLL void Alt_CE_Get_ComplexSeqVoltages(double** resultPtr, int32_t *resultDims, void* elem);
    ALTDSS_CAPI_DLL void Alt_CE_Get_ComplexSeqCurrents(double** resultPtr, int32_t *resultDims, void* elem);
    ALTDSS_CAPI_DLL void Alt_CE_Get_NodeOrder(int32_t** resultPtr, int32_t *resultDims, void* elem);
    ALTDSS_CAPI_DLL altdss_bool_t Alt_CE_Get_HasOCPDevice(void* elem);
    ALTDSS_CAPI_DLL int32_t Alt_CE_Get_NumControllers(void* elem);
    ALTDSS_CAPI_DLL void* Alt_CE_Get_OCPDevice(void* elem);
    ALTDSS_CAPI_DLL int32_t Alt_CE_Get_OCPDeviceIndex(void* elem);
    ALTDSS_CAPI_DLL void Alt_PCE_Get_VariableNames(char*** resultPtr, int32_t *resultDims, void* pce);
    ALTDSS_CAPI_DLL void Alt_PCE_Get_VariableValues(double** resultPtr, int32_t *resultDims, void* pce);
    ALTDSS_CAPI_DLL void* Alt_PCE_Get_EnergyMeter(void* elem);
    ALTDSS_CAPI_DLL const char* Alt_PCE_Get_EnergyMeterName(void* elem);
    ALTDSS_CAPI_DLL void* Alt_PDE_Get_EnergyMeter(void* elem);
    ALTDSS_CAPI_DLL const char* Alt_PDE_Get_EnergyMeterName(void* elem);