src/CAPI/CAPI_Alt.pas


    except
        On E: Exception do
        begin
            S := E.message + CRLF +
                'Element=' + elem.Name + CRLF +
                'Nphases=' + IntToStr(elem.Nphases) + CRLF +
                'NTerms=' + IntToStr(elem.NTerms) + CRLF +
                'NConds =' + IntToStr(elem.NConds);
            DoSimpleMsg(elem.DSS, S, 5012);
        end;
    end;
end;
//------------------------------------------------------------------------------
procedure Alt_CE_Close(elem: TDSSCktElement; Term, Phs: Integer); CDECL;
begin
    //TODO: why is this changing ActiveTerminal directly?
    elem.ActiveTerminal := @elem.Terminals[Term - 1];
    elem.Closed[Phs] := TRUE;
end;
//------------------------------------------------------------------------------
procedure Alt_CE_Open(elem: TDSSCktElement; Term, Phs: Integer); CDECL;
begin
    //TODO: why is this changing ActiveTerminal directly?
    elem.ActiveTerminal := @elem.Terminals[Term - 1];
    elem.Closed[Phs] := FALSE;
end;
//------------------------------------------------------------------------------
function Alt_CE_IsOpen(elem: TDSSCktElement; Term, Phs: Integer): TAPIBoolean; CDECL;
var
    i: Integer;
begin
    Result := False;
    
    //TODO: why is this changing ActiveTerminal directly?
    elem.ActiveTerminal := @elem.Terminals[Term - 1];
    if Phs = 0 then // At least one must be open
    begin
        Result := FALSE;
        for i := 1 to elem.NConds do
            if not elem.Closed[i] then
            begin
                Result := TRUE;
                Exit;
            end;
    end
    else // Check a specific phase or conductor
        Result := not elem.Closed[Phs];
end;
//------------------------------------------------------------------------------
procedure Alt_CE_Get_Residuals(var ResultPtr: PDouble; ResultCount: PAPISize; elem: TDSSCktElement); CDECL;
var
    Result: PDoubleArray0;
    cBuffer: pComplexArray;
    iV, i, j, k: Integer;
    cResid: Complex;
begin
    if MissingSolution(elem) then
    begin
        DefaultResult(ResultPtr, ResultCount);
        Exit;
    end;

    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 2 * elem.NTerms, 2, elem.NTerms);    // 2 values per terminal
    cBuffer := Allocmem(sizeof(Complex) * elem.Yorder);
    elem.GetCurrents(cBuffer);
    iV := 0;
    for i := 1 to elem.NTerms do
    begin
        cResid := 0;
        k := (i - 1) * elem.Nconds;
        for j := 1 to elem.Nconds do
        begin
            inc(k);
            cResid += CBuffer[k];
        end;
        Result[iV] := Cabs(cResid);
        Inc(iV);
        Result[iV] := CDang(cResid);
        Inc(iV);
    end;
    Reallocmem(cBuffer, 0);
end;
//------------------------------------------------------------------------------
procedure Alt_CE_Get_Yprim(var ResultPtr: PDouble; ResultCount: PAPISize; elem: TDSSCktElement); CDECL;
var
    cValues: pComplexArray;
begin
    DefaultResult(ResultPtr, ResultCount);
    cValues := elem.GetYprimValues(ALL_YPRIM);  // Get pointer to complex array of values
    if cValues = NIL then 
        Exit;

    DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 2 * elem.Yorder * elem.Yorder, elem.Yorder, elem.Yorder);
    Move(cValues^, ResultPtr^, ResultCount^ * SizeOf(Double));
end;
//------------------------------------------------------------------------------
function Alt_CE_Get_Handle(elem: TDSSCktElement): Integer; CDECL;
begin
    Result := elem.Handle
end;
//------------------------------------------------------------------------------
// function Alt_CE_Get_ControllerName(elem: TDSSCktElement; idx: Integer): PAnsiChar; CDECL;
// var
//     ctrl: TDSSCktElement;
// begin
//     Result := NIL;
//     if (idx > 0) and (idx <= elem.ControlElementList.Count) then
//     begin
//         ctrl := elem.ControlElementList.Get(idx);
//         if ctrl <> NIL then
//             Result := DSS_GetAsPAnsiChar(elem.DSS, ctrl.FullName);
//     end;
// end;
// //------------------------------------------------------------------------------
// function Alt_CE_Get_Controller(elem: TDSSCktElement; idx: Integer): TDSSObject; CDECL;
// begin
//     Result := NIL;
//     if (idx > 0) and (idx <= elem.ControlElementList.Count) then
//     begin
//         Result := elem.ControlElementList.Get(idx);
//     end;
// end;
//------------------------------------------------------------------------------
procedure Alt_CE_Get_Controllers(var ResultPtr: PPointer; ResultCount: PAPISize; elem: TDSSCktElement); CDECL;
begin
    ResultCount[0] := 0;
    if elem.ControlElementList = NIL then
        Exit;

    DSS_RecreateArray_PPointer(ResultPtr, ResultCount, elem.ControlElementList.Count);
    Move(elem.ControlElementList.InternalPointer^, ResultPtr^, ResultCount^ * SizeOf(Pointer));
end;
//------------------------------------------------------------------------------
function Alt_PCE_Get_EnergyMeterName(elem: TPCElement): PAnsiChar; CDECL;
begin
    Result := NIL;
    if Flg.HasEnergyMeter in elem.Flags then
    begin
        Result := PAnsiChar(elem.MeterObj.Name);
    end;
end;

function Alt_PCE_Get_EnergyMeter(elem: TPCElement): TDSSObject; CDECL;
begin
    Result := NIL;
    if Flg.HasEnergyMeter in elem.Flags then
    begin
        Result := elem.MeterObj;
    end;
end;

function Alt_PDE_Get_EnergyMeterName(elem: TPDElement): PAnsiChar; CDECL;
begin
    Result := NIL;
    if Flg.HasEnergyMeter in elem.Flags then
    begin
        Result := PAnsiChar(elem.MeterObj.Name);
    end;
end;

function Alt_PDE_Get_EnergyMeter(elem: TPDElement): TDSSObject; CDECL;
begin
    Result := NIL;
    if Flg.HasEnergyMeter in elem.Flags then
    begin
        Result := elem.MeterObj;
    end;
end;

//------------------------------------------------------------------------------
function Alt_CE_Get_HasVoltControl(elem: TDSSCktElement): TAPIBoolean; CDECL;
// Returns true if any of the controls is a capcontrol or a regcontrol
var
    ctrl: TDSSCktElement;
begin
    Result := FALSE;
    for ctrl in elem.ControlElementlist do
    begin
        case (ctrl.DSSObjType and CLASSMASK) of
            CAP_CONTROL,
            REG_CONTROL:
            begin
                Result := TRUE;
                Exit;
            end;
        end;
    end;
end;
//------------------------------------------------------------------------------
function Alt_CE_Get_HasSwitchControl(elem: TDSSCktElement): TAPIBoolean; CDECL;
var
    ctrl: TDSSCktElement;
begin
    Result := FALSE;
    for ctrl in elem.ControlElementList do
    begin
        case (ctrl.DSSObjType and CLASSMASK) of
            SWT_CONTROL:
            begin
                Result := TRUE;
                Exit;
            end;
        end;
    end;
end;
//------------------------------------------------------------------------------
procedure Alt_CE_Get_ComplexSeqVoltages(var ResultPtr: PDouble; ResultCount: PAPISize; elem: TDSSCktElement); CDECL;
var
    S: String;
begin
    DefaultResult(ResultPtr, ResultCount);

    if MissingSolution(elem) or (not elem.Enabled) or (elem.NodeRef = NIL) then
        Exit;

    try
        DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 2 * 3 * elem.NTerms, 3, elem.NTerms);
        CalcSeqVoltages(elem, pComplexArray(ResultPtr));

    except
        On E: Exception do
        begin
            S := E.message + CRLF +
                'Element=' + elem.Name + CRLF +
                'Nphases=' + IntToStr(elem.Nphases) + CRLF +
                'NTerms=' + IntToStr(elem.NTerms) + CRLF +
                'NConds =' + IntToStr(elem.NConds);
            DoSimpleMsg(elem.DSS, S, 5012);
        end;
    end;
end;
//------------------------------------------------------------------------------
procedure Alt_CE_Get_ComplexSeqCurrents(var ResultPtr: PDouble; ResultCount: PAPISize; elem: TDSSCktElement); CDECL;
var
    Result: PDoubleArray0;
    i012: pComplexArray;
    S: String;
begin
    DefaultResult(ResultPtr, ResultCount);
    
    if MissingSolution(elem) or (not elem.Enabled) then
        Exit;

    try
        Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 2 * 3 * elem.NTerms, 3, elem.NTerms);
        i012 := pComplexArray(Result);
        // get complex seq voltages
        _CalcSeqCurrents(elem, i012);

    except
        On E: Exception do
        begin
            S := E.message + CRLF +
                'Element=' + elem.Name + CRLF +
                'Nphases=' + IntToStr(elem.Nphases) + CRLF +
                'NTerms=' + IntToStr(elem.NTerms) + CRLF +
                'NConds =' + IntToStr(elem.NConds);
            DoSimpleMsg(elem.DSS, S, 5012);
        end;
    end;
end;
//------------------------------------------------------------------------------
procedure Alt_PCE_Get_VariableNames(var ResultPtr: PPAnsiChar; ResultCount: PAPISize; elem: TPCElement); CDECL;
var
    Result: PPAnsiCharArray0;
    k: Integer;
begin
    Result := DSS_RecreateArray_PPAnsiChar(ResultPtr, ResultCount, elem.NumVariables);
    for k := 1 to elem.NumVariables do
    begin
        Result[k - 1] := DSS_CopyStringAsPChar(elem.VariableName(k));
    end;
end;
//------------------------------------------------------------------------------
procedure Alt_PCE_Get_VariableValues(var ResultPtr: PDouble; ResultCount: PAPISize; elem: TPCElement); CDECL;
// Return array of doubles with values of all variables if PCElement
var
    Result: PDoubleArray0;
    k: Integer;
begin
    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, elem.NumVariables);
    for k := 1 to elem.NumVariables do
    begin
        Result[k - 1] := elem.Variable[k];
    end;
end;
//------------------------------------------------------------------------------
procedure Alt_CE_Get_NodeOrder(var ResultPtr: PInteger; ResultCount: PAPISize; elem: TDSSCktElement); CDECL;
var
    Result: PIntegerArray0;
    k: Integer;
    i: Integer;
    j: Integer;
begin
    if elem.NodeRef = NIL then
    begin
        // Warn and exit
        DoSimpleMsg(elem.DSS, _('Nodes are not initialized. Try solving the system first.'), 15013);
        DefaultResult(ResultPtr, ResultCount);
        Exit;
    end;

    Result := DSS_RecreateArray_PInteger(ResultPtr, ResultCount, elem.NTerms * elem.Nconds, elem.NTerms, elem.Nconds);
    k := 0;
    for i := 1 to elem.Nterms do
    begin
        for j := (i - 1) * elem.NConds + 1 to i * elem.Nconds do
        begin
            Result[k] := GetNodeNum(elem.DSS, elem.NodeRef[j]);
            inc(k);
        end;
    end;
end;
//------------------------------------------------------------------------------
function Alt_CE_Get_HasOCPDevice(elem: TDSSCktElement): TAPIBoolean; CDECL;
// Check for presence of a fuse, recloser, etc.
begin
    Result := Flg.HasOCPDevice in elem.Flags;
end;
//------------------------------------------------------------------------------
function Alt_CE_Get_NumControllers(elem: TDSSCktElement): Integer; CDECL;
begin
    Result := elem.ControlElementList.Count;
end;
//------------------------------------------------------------------------------
function Alt_CE_Get_OCPDevice(elem: TDSSCktElement): TDSSCktElement; CDECL;
var
    iControl: Integer;
    ctrl: TDSSCktElement;
begin
    Result := NIL;
    iControl := 1;
    repeat
        // cycle through the list of controls until we find a fuse, recloser, or relay
        ctrl := elem.ControlElementList.Get(iControl);
        if ctrl <> NIL then
            case (ctrl.DSSObjType and CLASSMASK) of
                FUSE_CONTROL:
                    Result := ctrl;
                RECLOSER_CONTROL:
                    Result := ctrl;
                RELAY_CONTROL:
                    Result := ctrl;
            end;
        inc(iControl);
    until (iControl > elem.ControlElementList.Count) or (Result <> NIL);
end;
//------------------------------------------------------------------------------
function Alt_CE_Get_OCPDeviceIndex(elem: TDSSCktElement): Integer; CDECL;
var
    iControl: Integer;
    ctrl: TDSSCktElement;
begin
    Result := 0;
